<resources>
    <string name="app_name">IoTBasedGreenhouse</string>
    <string name="water_flow">Water Flow</string>
    <string name="soil_moisture">Soil Moisture</string>
    <string name="humidity">Humidity</string>
    <string name="temperature">Temperature</string>
    <string name="greenhouse_control_panel">Greenhouse Control Panel</string>
    <string name="settings">Settings</string>
    <string name="display_text">Display text</string>
    <string name="channel_name">greenhouseNotifications</string>
    <string name="channel_description">Notification for Greenhouse alerts</string>
    <string name="dash">---</string>
    <string name="click_here_to_view_in_graphical_form">Click here to view in graphical form</string>
</resources>
