<?xml version="1.1" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/Temperature"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/temperature"
                android:fontFamily="@font/roboto_black"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="32sp"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/tempValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="51dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/roboto_black"
                android:text="@string/dash"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:typeface="monospace" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/tempAnimation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="8dp"
                app:lottie_autoPlay="true"
                app:lottie_rawRes="@raw/thermometer3" />

        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:id="@+id/Humidity"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/roboto_black"
                android:text="@string/humidity"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="32sp"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/humidityValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="100dp"
                android:fontFamily="@font/roboto_black"
                android:text="@string/dash"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:typeface="monospace" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/humidityAnimation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="8dp"
                app:lottie_autoPlay="true"
                app:lottie_rawRes="@raw/thermometer3" />

        </LinearLayout>

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:background="@color/colorAccent"/>

        <LinearLayout
            android:id="@+id/Moisture"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/roboto_black"
                android:text="@string/soil_moisture"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="32sp"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/moistureValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/roboto_black"
                android:text="@string/dash"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:typeface="monospace" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/moistureAnimation"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                app:lottie_autoPlay="true"
                app:lottie_rawRes="@raw/sprout_plant" />

        </LinearLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:background="@color/colorAccent" />


        <LinearLayout
            android:id="@+id/WaterFlow"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/roboto_black"
                android:text="@string/water_flow"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="32sp"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/waterFlowValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/roboto_black"
                android:text="@string/dash"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:typeface="monospace" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/waterFlowAnimation"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_gravity="end"
                app:lottie_autoPlay="true"
                app:lottie_rawRes="@raw/color_water_drop" />

        </LinearLayout>

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:background="@color/colorAccent" />
    </LinearLayout>





</androidx.core.widget.NestedScrollView>